# sqlight

./: .gitignore  CMakeLists.txt  Makefile  Makefile3  main.cpp  tests_spec.rb
include/: cursor.h  input.h  node.h  pager.h  row.h  sqlight.h  statement.h  storage.h  table.h  util.h
src/: cursor.cpp  input.cpp  input.h  main.cpp  node.cpp  pager.cpp  row.cpp  sqlight.cpp  statement.cpp  statement.h  table.cpp  table.h  util.cpp
tests/: main_test.cpp
